# groundshift

./: DATAFLOW_SUMMARY.md  DETECTION_DATAFLOW_ARCHITECTURE.md  LICENSE  README.md  groundshift_ingestion_report.txt  package-lock.json  package.json  pyproject.toml
groundshift/: __init__.py
groundshift.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
groundshift/api/: __init__.py  main.py  models.py  websocket.py
groundshift/api/routes/: DETECTION_INTEGRATION.md  __init__.py  alerts.py  watches.py
groundshift/cli/: __init__.py  main.py
groundshift/core/: __init__.py
groundshift/core/alerting/: __init__.py  geojson.py  models.py  service.py
groundshift/core/detection/: WORKFLOWS.md  __init__.py  async_base.py  async_service.py  base.py  data_loader.py  historical.py  integration_example.py  models.py  models_v2.py  registry.py  service.py  spatial.py  spectral.py  temporal.py  utils.py
groundshift/core/ingestion/: __init__.py  cache.py  models.py  service.py
groundshift/core/ingestion/providers/: __init__.py  base.py  sentinelsat_provider.py
groundshift/core/preprocessing/: __init__.py  cloud_mask.py  coregistration.py  models.py  normalisation.py  service.py
tests/: test_alerting_service.py  test_cloud_mask.py  test_coregistration.py  test_detection_service.py  test_ingestion_service.py  test_normalisation.py  test_preprocessing_service.py
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css  types.ts
ui/src/components/: AlertPanel.tsx  BottomBar.tsx  DetailPanel.tsx  LeftPanel.tsx  MapView.tsx  RightPanel.tsx  TopNav.tsx  WatchPanel.tsx
ui/src/utils/: mapZoom.ts  terrainScene.ts  terrainTiles.ts
